Version 0.38.3 (2022-03-20)
- Add check for available API method to identify BidCos Wired

Version 0.38.2 (2022-03-20)
- Catch SysVar parsing exceptions

Version 0.38.1 (2022-03-20)
- Fix lock/unlock for HM-Sec-Key

Version 0.38.0 (2022-03-20)
- Add central validation
- Add jso_rpc.post_script

Version 0.37.7 (2022-03-18)
- Add additional system_listMethods to avoid errors on CCU

Version 0.37.6 (2022-03-18)
- Add JsonRPC.Session.logout before central stop to avoid warn logs at CCU.

Version 0.37.5 (2022-03-18)
- Add api for available interfaces
- Send event if interface is not available
- Don't block available interfaces

Version 0.37.4 (2022-03-17)
- Fix reload paramset
- Fix value converter

Version 0.37.3 (2022-03-17)
- Cleanup caching code

Version 0.37.2 (2022-03-17)
- Use homematic script to fetch initial data for CCU/HM

Version 0.37.1 (2022-03-16)
- Add semaphore(1) to improve cache usage (less api calls)

Version 0.37.0 (2022-03-15)
- Avoid unnecessary prefetches
- Fix JsonRPC Session handling
- Rename NamesCache to DeviceDetailsCache
- Move RoomCache to DeviceDetailsCache
- Move hm value converter to helpers
- Use JSON RPC for get_value, get_paramset, get_paramset_description
- Use default for binary_sensor

Version 0.36.3 (2022-03-09)
- Add hub property
- Add check if callback is already registered
- Use callback when hub is created

Version 0.36.2 (2022-03-06)
- Fix cover device mapping

Version 0.36.1 (2022-03-06)
- Small climate fix
- Make more devices custom_entities

Version 0.36.0 (2022-02-24)
- Remove HA constants
- Use enums own constants

Version 0.35.3 (2022-02-23)
- Move xmlrpc credentials to header

Version 0.35.2 (2022-02-22)
- Remove password from Exceptions

Version 0.35.1 (2022-02-21)
- Fix IpBlind
- Fix parameter visibility

Version 0.35.0 (2022-02-19)
- Fix usage of async_add_executor_job
- Improve local_ip identification

Version 0.34.2 (2022-02-16)
- Add is_locking/is_unlocking to lock

Version 0.34.1 (2022-02-16)