@@ -170,6 +170,7 @@ IF_BIDCOS_RF_PORT = 2001
 IF_BIDCOS_RF_TLS_PORT = 42001
 
 IF_NAMES = [IF_VIRTUAL_DEVICES_NAME, IF_HMIP_RF_NAME, IF_HS485D_NAME, IF_BIDCOS_RF_NAME]
+IF_PRIMARY = [IF_HMIP_RF_NAME, IF_BIDCOS_RF_NAME]
 
 IF_DEFAULT_ALLOCATION = {
     IF_VIRTUAL_DEVICES_PORT: IF_VIRTUAL_DEVICES_NAME,
